# boat-lib

./: Cargo.toml  README.md
.github/workflows/: rust.yml
docs/: schema.erd
src/: activity.rs  cli.rs  converter.rs  csv_io.rs  data.rs  fs_loader.rs  lib.rs  loader.rs  main.rs  models.rs  parser.rs  repository.rs  schema.sql  store.rs  tracker.rs  utils.rs  validator.rs
src/models/: activity.rs  log.rs  mod.rs  tag.rs
src/repository/: activities_repository.rs  file_repository.rs  logs_repository.rs  mod.rs  tags_repository.rs
tests/: repository_activities.rs  repository_logs.rs  repository_tags.rs  utils.rs
