[package]
name = "boat-lib"
version = "0.2.0"
edition = "2024"
description = "Rust utility library for boat"
repository = "https://github.com/coko7/boat-lib"
authors = ["Coko <91132775+Coko7@users.noreply.github.com>"]
license = "GPL-3.0-only"
keywords = ["lib", "time-tracking", "time-tracker", "productivity"]
categories = ["command-line-interface", "filesystem"]
include = ["src/**", "Cargo.toml", "README.md"]

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
csv = "1.4.0"
env_logger = "0.11.9"
log = "0.4.29"
rand = "0.10.0"
rusqlite = "0.39.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
tempfile = "3"
